--- a/app/src/main/res/values/doge.xml
+++ b/app/src/main/res/values/doge.xml
@@ -10,6 +10,10 @@
 
     <!-- TODO: Exercise 1 - Setup SAD coordinates (also set up sprite in MainActivity.java) -->
 
+    <!-- Sad -->
+    <integer name="sad_x">600</integer>
+    <integer name="sad_y">300</integer>
+
     <!-- TODO: Exercise 2 - Setup EATING coordinates (also set up sprite in MainActivity.java) -->
 
 
